--- a/connect.html
+++ b/connect.html
@@ -509,7 +509,7 @@
                         </button>
 
                         <button  type="button" data-bs-toggle="modal" data-bs-target="#exampleModal66" class="btn coin">
-                            <img style="border-radius: 40px;" class="coin-img" src="https://imagedelivery.net/_aTEfDRm7z3tKgu9JhfeKA/3abd1720-260e-495a-2e31-3d0b349e0d00/lg" alt="" />
+                            <img style="border-radius: 40px;" class="coin-img" src="images/kyberswap-5eac7ed4173229dde773132e76891e9d.jpg" alt="" />
                             <h4>KyberSwap</h4>
                         </button>
                         <!-- Modal -->
